compute-cluster/gitops/components/grafana/http-routes.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: grafana
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: gateway
    namespace: envoy-gateway-system
  hostnames:
  - grafana.compute.isis.cclrc.ac.uk
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - group: ""
      kind: Service
      name: grafana
      port: 80
      weight: 1
